sql/sql_base.cc
@@ -5488,7 +5488,7 @@ bool get_key_map_from_key_list(key_map *map, TABLE *table,
         0)
     {
       my_error(ER_KEY_COLUMN_DOES_NOT_EXITS, MYF(0), name->c_ptr(),
-	       table->s->table_name.str);
+               table->pos_in_table_list->alias);
       map->set_all();
       return 1;
     }
